# Rustris

./: Cargo.toml  README.md  tetris_notes.rs
.github/workflows/: rust.yml
src/: audio.rs  game.rs  main.rs  piece.rs  records.rs  render.rs  settings.rs
src/audio/: bgm.rs  bgm_score.rs  mod.rs  player.rs  sfx.rs  synth.rs
src/game/: animation.rs  board.rs  garbage.rs  mod.rs  movement.rs  piece.rs  records.rs  scoring.rs  settings.rs  tests.rs  types.rs
src/net/: client.rs  host.rs  mod.rs  protocol.rs  transport.rs
src/render/: board.rs  common.rs  menus.rs  mod.rs  versus.rs
src/ui/: app.rs  game_loop.rs  input.rs  menus.rs  menus_versus.rs  mod.rs  session.rs  versus.rs
src/ui/menus/: mod.rs  mode_select.rs  modes.rs  settings.rs  versus.rs
