[package]
name = "rustris"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
description = "A guideline-compliant terminal Tetris written in Rust"
license = "GPL-3.0"
repository = "https://github.com/koishi510/Rustris"
readme = "README.md"
keywords = ["tetris", "terminal", "game", "tui"]
categories = ["games"]

[dependencies]
crossterm = "0.28"
rand = "0.8"
rodio = { version = "0.20", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
