[package]
name = "rustris"
version = "0.6.2"
edition = "2024"
rust-version = "1.85"
description = "A guideline-compliant terminal Tetris with LAN multiplayer support"
authors = ["koishi <kkoishichan@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/koishi510/Rustris"
readme = "README.md"
keywords = ["tetris", "terminal", "game", "tui"]
categories = ["games"]

[dependencies]
crossterm = "0.28"
rand = "0.8"
rodio = { version = "0.20", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
